--- a/style.css
+++ b/style.css
@@ -35,11 +35,8 @@ body{
     overflow-y: hidden;
 }
 
-.header-transp{
-    background: transparent;
-}
-
 .header-scroll{
+    top: 0px;
     background-color: #231f207d;
     backdrop-filter: blur(5px);
 }
