--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@
 :root{
     --cor-texto-preto: #000;
     --cor-texto-branco: #fff;
+    --cor-texto-amarelo: #fcd800;
     --cor-background-preto: #000;
-    --cor-background-branco: #fff;
+    --cor-background-branco: #fff;
+    --cor-background-amarelo: #fcd800;
 }
 
 body{
@@ -26,12 +28,12 @@ body{
 }
 
 ::-webkit-scrollbar-thumb{
-    background: #fcd800;
+    background: var(--cor-texto-amarelo);
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover{
-    background: #dabb00;
+    background: var(--cor-background-amarelo);
 }
 
 .header{
@@ -47,6 +49,7 @@ body{
     top: 0px;
     background-color: #231f207d;
     backdrop-filter: blur(5px);
+    transition: 0.5s;
 }
 
 .softcom-logo{
@@ -70,11 +73,11 @@ body{
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 600;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .header-link:hover{
-    color: #ebc900;
+    color: var(--cor-texto-amarelo);
 }
 
 .header-fale-conosco{
@@ -109,15 +112,15 @@ body{
 .header-proposta:hover{
     font-weight: 600;
     color: var(--cor-texto-preto);
-    background-color: #fcd800;
+    background-color: var(--cor-background-amarelo);
 }
 
-.mensage-icon{
+.icon-proposta{
     filter: brightness(0%);
     transition: 0.5s;
 } 
 
-/* .header-proposta:hover .mensage-icon{
+/* .header-proposta:hover .icon-proposta{
     filter: brightness(0%);
 } */
 
@@ -126,7 +129,7 @@ body{
 }
 
 .main-page{
-    background-color: #fcd800;
+    background-color: var(--cor-background-amarelo);
 }
 
 .banner{
@@ -158,25 +161,28 @@ body{
 .mid-page{
     color: var(--cor-texto-preto);
     display: flex;
+    flex-direction: column;
+    text-align: center;
     justify-content: center;
 }
 
 .segmentos{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    gap: 50px;
+    grid-template-columns: 10em 10em 10em 10em 10em;
+    justify-content: center;
+    text-align: center;
 }
 
 .container-segmentos{
     display: flex;
-    justify-content: center;
-    text-align: center;
-    gap: 60px;
-    margin-bottom: 4em;
+    align-items: center;
+    padding: 1em 1em 1em 1em;
 }
 
 
-.segmentos-images{
-    width: 7em;
+.segmentos-images{   
+    width: 100%; 
 }
 
 .segmentos-links{
@@ -184,15 +190,15 @@ body{
     flex-direction: column;
     justify-content: end;
     text-decoration: none;
+    width: 8em;
     gap: 20px;
     color: var(--cor-texto-preto);
-    transition: 0.7s;
+    transition: 0.5s;
 }
 
 .segmentos-links:hover{
-    background-color: #fcd800;
-    border: 1px solid var(--cor-background-preto);
-    box-shadow: 0.1em 1.5em 1em var(--cor-background-preto);
+    background-color: var(--cor-background-amarelo);
+    box-shadow: 0.1em 0.5em 1em var(--cor-background-preto);
     border-radius: 0.5em;
 }
 
@@ -202,12 +208,23 @@ body{
 
 .ver-mais{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fcd800;
-    margin-left: 25em;
-    margin-right: 25em;;
+    justify-content: center;
+    font-size: 1.5rem;
     font-weight: 600;
+}
+
+.ver-mais-link{
+    text-decoration: none;
+    color: var(--cor-texto-preto);
+    transition: 0.5s;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding: 0.5em 0.5em;
+}
+
+.ver-mais-link:hover{
+    border-radius: 0.3em;
+    background-color: var(--cor-background-amarelo);
 }
 
 .container-segmentos span{
@@ -215,8 +232,8 @@ body{
     font-weight: 600;
 }
 
-.segmentos p{
-    font-size: 1.5rem;
+.mid-page p{
+    font-size: 1.7rem;
     font-weight: 500;
     margin-left: 15%;
     margin-right: 15%;
@@ -228,21 +245,22 @@ body{
 h1{
     display: flex; 
     justify-content: center;
+    margin-top: 0.5em;
     margin-bottom: 0.2em;
     font-size: 5rem;
     transition: 0.5s;
 }
 
 h1:hover{
-    color: #fcd800;
+    color: var(--cor-texto-amarelo);
 }
 
 .strong-yellow{
-    color: #fcd800;
+    color: var(--cor-texto-preto);
 }
 
 .baseboard{
-    background-color: #fcd800;
+    background-color: var(--cor-background-amarelo);
     padding: 2%;
     text-align: center;
     margin-top: auto;
@@ -252,7 +270,7 @@ h1:hover{
 
 .baseboard-link{
     text-decoration: none;
-    color: #000;
+    color: var(--cor-texto-preto);
 }
 
 @media(max-width: 1308px){
