--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@
 :root{
     --cor-texto-preto: #000;
     --cor-texto-branco: #fff;
-    --cor-texto-amarelo: #fcd800;
+    --cor-texto-amarelo: #f5d930;
     --cor-background-preto: #000;
     --cor-background-branco: #fff;
-    --cor-background-amarelo: #fcd800;
+    --cor-background-amarelo: #f5d930;
 }
 
 body{
@@ -62,7 +62,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 2em;
 }
 
 .menu-solucoes{
@@ -92,7 +92,8 @@ body{
 
 .div-button{
     display: flex;
-    gap: 20px;
+    margin-left: 3em;
+    gap: 1.5em;
 }
 
 .header-proposta{
@@ -122,9 +123,9 @@ body{
     transition: 0.5s;
 } 
 
-/* .header-proposta:hover .icon-proposta{
+.header-proposta:hover .icon-proposta{
     filter: brightness(0%);
-} */
+}
 
 .icon-user{
     width: 2em;
@@ -157,7 +158,11 @@ body{
     display: flex;
     justify-content: center;
     color: var(--cor-texto-preto);
-    font-size: 1.1rem;
+}
+
+.intro p{
+    font-size: 1.6rem;
+    font-weight: 600;
 }
 
 .mid-page{
@@ -166,7 +171,7 @@ body{
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    gap: 2em;
+    margin-top: 5em;
 }
 
 .mid-page p{
@@ -179,15 +184,22 @@ body{
     text-align: center;
 }
 
-/* .segmentos{
-    Classe sem função
-} */
+.segmentos{
+    margin-top: 2em;
+    margin-bottom: 4em;
+}
 
 .container-segmentos{   
     display: flex;
     justify-content: center;
     padding: 1em;
     gap: 6em;
+}
+
+.segmentos{
+    display: flex;
+    flex-direction: column;
+    gap: 4em;
 }
 
 .segmentos-links{
@@ -205,6 +217,7 @@ body{
 }
 
 .segmentos-links:hover{
+    background-color: #eee;
     box-shadow: 0.2em 0.2em 0.3em var(--cor-background-preto);
     border-radius: 0.5em;
     scale: 1.1;
@@ -215,6 +228,8 @@ body{
 }
 
 .line-yellow{
+    margin-right: 15em;
+    margin-left: 15em;
     border-bottom: 2px solid #fcd800;
 }
 
@@ -226,12 +241,14 @@ body{
 }
 
 .ver-mais-link{
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: var(--cor-texto-preto);
-    transition: 0.5s;
     padding: 0.5em 0.5em;
     background-color: var(--cor-background-amarelo);
     border-radius: 0.3em;
+    transition: 0.5s;
 }
 
 .ver-mais-link:hover{
@@ -247,32 +264,46 @@ body{
 h1{
     display: flex; 
     justify-content: center;
-    margin-top: 0.5em;
-    margin-bottom: 0.2em;
     font-size: 4.5rem;
     transition: 0.5s;
+    font-family: 'Futura', sans-serif;
 }
 
 h1:hover{
     color: var(--cor-texto-amarelo);
 }
 
-.strong-yellow{
-    color: var(--cor-texto-preto);
+.strong-chaves{
+    border-radius: 0.1em;
+    background-color: #000;
+    color: var(--cor-texto-branco);
 }
 
 .bottom-page{
     display: flex;
     flex-direction: column;
-    text-align: center;
     justify-content: center;
-    margin-top: 10%;
-    gap: 2em;
+    text-align: center;
+    margin-top: 7em;
+    margin-bottom: 10em;
+    gap: 4em;
 }
 
-/* .container-solucoes{
-    
-} */
+.container-text-solucoes{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+.container-text-solucoes p{
+    font-size: 1.5rem;   
+}
+
+.container-solucoes{
+    display: flex;
+    flex-direction: column;
+    gap: 4em;
+}
 
 .solucoes{
     display: flex;
@@ -303,6 +334,7 @@ h1:hover{
 }
 
 .solucoes-link:hover{
+    background-color: #eee;
     box-shadow: 0.2em 0.2em 0.3em var(--cor-background-preto);
     border-radius: 0.5em;
     scale: 1.1;
@@ -310,6 +342,91 @@ h1:hover{
 
 .image-solucoes{
     width: 100%;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    overflow-y: hidden;
+    color: var(--cor-texto-branco);
+    background-image: url(https://softcomtecnologia.com.br/wp-content/uploads/2020/03/footerimage.jpg);
+    height: 25em;
+    padding: 3em;
+}
+
+.softcom{
+    display: flex;
+    flex-direction: column;
+    height: 20em;
+    font-size: 1.2em;
+}
+
+.menu1{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    margin-left: 30em;
+}
+
+.menu2{
+    display: flex;
+    flex-direction: column;
+    height: 30em;
+}
+
+.call-you{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: var(--cor-texto-preto);
+    background-color: #fcd800;
+    border-radius: 0.5em;
+    margin-bottom: 2em;
+    font-size: 1.1rem;
+    font-weight: 600;
+    height: 2.1em;
+    width: 10em;
+    gap: 0.5em;
+    transition: 0.5s;
+}
+
+.call-you:hover{
+    background-color: #ebc900;
+}
+
+.social-medias{
+    display: flex;
+    align-items: center;
+    width: 20em;
+    height: 5em;
+    gap: 0.1em;
+}
+
+.social-image{
+    width: 2.4em;
+    transition: 0.5s;
+}
+
+.social-image:hover{
+    scale: 1.1;
+    filter: brightness(85%);
+}
+
+.menu-link{
+    text-decoration: none;
+    color: var(--cor-texto-branco);
+    font-size: 1.2rem;
+    transition: 0.5s;
+}
+
+.menu-link:hover{
+    color: var(--cor-texto-amarelo);
+}
+
+h2{
+    width: 12em;
+    color: var(--cor-texto-amarelo);
 }
 
 .baseboard{
